--- a/daily/2025-06-16.md
+++ b/daily/2025-06-16.md
@@ -1,16 +1,19 @@
 # AI洞察日报 2025/6/16
 
 **AI产品与功能更新**
-1.  **Sketch2Vid**作为一项创新项目，正利用**Google Veo 3**和**Gemini AI模型**，将**手绘草图**神奇地转化为带有**视觉细节**和**音效**的**动态视频**，这无疑极大地简化了视频内容的创作流程。目前，该项目仍处于原型阶段，并且需要**Google Veo 3**的访问权限。更多详情，请访问['项目地址'](https://github.com/NSTiwari/Sketch2Vid)。
-2.  **orange.ai**在使用**Veo3**模型后，对其出色的效果赞不绝口，但同时也强调，若想通过聊天来精准控制生成内容，**提示词**的设计必须字斟句酌。此外，用户还指出**Gemini**存在不少**bug**，特别是其**视频生成功能**经常出错，每次打开新窗口都得反复点击多次才能进入视频生成界面，这无疑给用户带来了不便。['更多详情'](https://x.com/oran_ge/status/1934204708614545697)
+1. **Sketch2Vid**是一款前沿的**AI工具项目**，能把**手绘草图**变**动态视频**，还自带声音！它结合了Google的**Veo 3模型**和**Gemini**，通过**AI智能理解**，**自动生成高清视频**和**音效**，为**创意表达**开辟了新天地。['项目地址'](https://github.com/NSTiwari/Sketch2Vid)
 
 **AI行业展望与社会影响**
-1.  **百度**近期正式启动了2026届"**AIDU计划**”，这标志着其**最大规模顶尖AI人才招聘**的开启，旨在培养**未来AI技术领军人才**。该计划的招聘规模大幅扩增超过60%，覆盖23个核心业务部门和11类前沿研究方向，为入选学员提供了**最前沿研究课题**、**专属技术专家导师一对一指导**以及**万卡算力资源**，展现了百度在AI人才培养上的雄心壮志。
+1. 百度最近放了个"大招”，启动了史上最大规模的**AI人才招聘**——**2026届"AIDU计划”**，目标是培养**未来AI技术领军人才**。这个计划提供了包括**大模型算法**、**机器学习**等23个热门方向的岗位，还给入选者配备了海量的算力、亿级用户场景和专家指导，誓要助他们一臂之力，成为**AI领域的佼佼者**。 <br/> [![图片](https://pic.chinaz.com/picmap/201901281035388749_0.jpg "img")](https://pic.chinaz.com/picmap/201901281035388749_0.jpg) <br/>
 
 **开源TOP项目**
-1.  **deepeval**是一个备受瞩目的**LLM评估框架**，拥有7948颗星，其核心目标是协助开发者和研究人员高效且严谨地对**大型语言模型**（LLM）进行**性能评估**，从而确保这些模型的可靠性和准确性。更多详情，请访问['项目地址'](https://github.com/confident-ai/deepeval)。
-2.  `all-rag-techniques`项目致力于以更简单的方式实现所有**RAG技术**，目前已累计获得4151个星标，展现了其在简化技术应用方面的受欢迎程度。['项目地址'](https://github.com/FareedKhan-dev/all-rag-techniques)
-3.  `ai-hedge-fund`项目旨在构建一个**AI对冲基金团队**，目前已累计获得36276个星标，显示出其在AI金融领域的热度与潜力。['项目地址'](https://github.com/virattt/ai-hedge-fund)
+1. **deepeval**是一款拥有7959颗星的**LLM评估框架**，专为**大语言模型**提供**专业的性能评估**能力，帮助开发者**衡量模型效果**。['项目地址'](https://github.com/confident-ai/deepeval)
+2. "all-rag-techniques”是一个坐拥**4166星**的**开源项目**，它的厉害之处在于能用更简单的方法实现所有**RAG技术**，大大减轻了开发者的负担。['项目地址'](https://github.com/FareedKhan-dev/all-rag-techniques)
+3. 拥有**36291星**的"ai-hedge-fund”项目可不一般，它是一个用**AI技术**武装起来的**对冲基金团队**，专门通过**人工智能驱动的策略**进行**金融投资**。['项目地址'](https://github.com/virattt/ai-hedge-fund)
+
+**社媒分享**
+1. **orange.ai**在社交媒体上分享了**Veo3模型**的试用感受，对它的表现表示肯定，但特别指出通过聊天控制时，**Prompt**（提示词）的设计需要费一番心思。他还提到，**Gemini**有个小**Bug**，得连点两次"Video”按钮才能避免生成图片路径。['更多详情'](https://x.com/oran_ge/status/1934204708614545697)
+2. 杨轶在社交媒体上给**创业者**们支招，教大家如何避免做出"无人问津”的产品，核心秘诀是快速**验证**想法。他分享了一个超简单的**"四问过滤法”**：想想有没有付费用户？有没有现有受众？能不能用一句话说清产品核心价值？能不能快速推出功能版？目的就是让创业者**尽早失败**、**尽早学习**，别在没市场需求的项目上白费力气。['更多详情'](https://m.okjike.com/originalPosts/684e90216c1af58f5d957ece)
 
 ---
 
