Update daily summary file for 2025-06-18

--- a/daily/2025-06-18.md
+++ b/daily/2025-06-18.md
@@ -1,41 +1,35 @@
 # AI洞察日报 2025/6/18
 
 **AI产品与功能更新**
-1.  **Rokid**近日联合**支付宝**推出全球首个**智能眼镜支付产品**"**看一下支付**”。用户戴上**Rokid Glasses**，动动嘴结合扫码就能付款，大大提高了效率。这不仅方便，还通过**用户本人操作**、**声纹多因子验证**和**实时风控**，确保了**支付安全**和**隐私**，适用范围非常广，日常生活消费都能用。
-    <br/> [![图片](https://pic.chinaz.com/picmap/202005261145133673_9.jpg "img")](https://pic.chinaz.com/picmap/202005261145133673_9.jpg) <br/>
-2.  百度在AI Day上成功打造了业界首个**罗永浩数字人**，并发布了**高说服力数字人**的四大关键技术突破。这技术简直是直播营销的"作弊器”，让数字人不仅"懂创作”，还能"超长待机”，带货效果甚至能媲美真人，体验感也更佳。同时，百度通过"**梦蝶计划**”和"**繁星计划**”两大行动，正大力推动数字人直播的普及，让更多人能轻松玩转数字人直播，一起分享数字经济的甜头。
-    <br/> [![图片](https://pic.chinaz.com/picmap/202308101450093085_0.jpg "img")](https://pic.chinaz.com/picmap/202308101450093085_0.jpg) <br/>
-3.  豆包电脑版和网页版现在有了超酷的"**AI播客**”功能！你只需上传一份PDF文件或扔一个网页链接，它就能迅速帮你生成双人对话形式的播客内容，简直是"轻松听长文”神器，还省去了复杂的后期剪辑。这项功能通过**自然语音**模拟真人播客的口语习惯，大大提升了内容创作效率，也拓宽了我们接收信息的方式，让大家无论工作学习还是碎片化时间，都能便捷高效地获取知识。
-    <br/> [![图片](https://upload.chinaz.com/2025/0617/6388576568500747561503399.png "img")](https://upload.chinaz.com/2025/0617/6388576568500747561503399.png) <br/>
-4.  **LinkedIn**最近给所有用户都推出了全新的**AI求职搜索**功能，这简直是求职者们的"神助攻”！它利用基于平台知识库训练的**大型语言模型（LLM）**，让你可以用**自然语言**来描述心仪的工作，而不是苦苦地想关键词，结果推荐的职位也更精准。这项功能旨在解决以前关键词搜索不理想的痛点，让找工作变得更**直观**、更**包容**，人人都能轻松上手。
-    <br/> [![图片](https://pic.chinaz.com/picmap/202305291455510902_2.jpg "img")](https://pic.chinaz.com/picmap/202305291455510902_2.jpg) <br/>
-5.  阿里巴巴集团宣布，他们的旗舰**人工智能模型Qwen3**又升级啦！新版本成功适配了**苹果**的**MLX架构**，这简直是给**Apple Intelligence**在中国市场登陆提前铺好了红毯，指日可待。新版**Qwen3**不仅性能更强劲，还支持惊人的**119种语言和方言**，并且采用了**专家混合（MoE）**和**混合推理能力**，这将为中国用户带来更先进、更智能的AI服务体验。
-    <br/> [![图片](https://upload.chinaz.com/2025/0617/6388574725442146719806256.png "img")](https://upload.chinaz.com/2025/0617/6388574725442146719806256.png) <br/>
-6.  归藏分享了**谷歌Gemini**团队产品和研发负责人的独到见解，揭示了**优秀编码模型**的理念以及**Vibe Coding**的深远影响。他们强调，Gemini在提升代码能力上，最注重的是**数据和方法论**，以及**代码库上下文**的重要性。谷歌团队还提出了一个宏伟愿景——"**代码就是一切**”，他们致力于构建一个能泛化到所有用例的**通用模型**，这听起来是不是很酷？想看更多，点击['更多详情'](https://m.okjike.com/originalPosts/6850ec3d823f9a946aa25c94)。
-    <video src="https://youtu.be/jwbG_m-X-gE?si=u0nz9RxOaUlhW_Ab" controls="controls" width="100%"></video> <br/> [![图片](https://cdnv2.ruguoapp.com/Ft-r8n03xds6ol7MmcJzdwcp0XsAv3.png "img")](https://cdnv2.ruguoapp.com/Ft-r8n03xds6ol7MmcJzdwcp0XsAv3.png) <br/> [![图片](https://cdnv2.ruguoapp.com/Fh7Qpf28Gpzqpla0MaHOvgxkU-FRv3.png "img")](https://cdnv2.ruguoapp.com/Fh7Qpf28Gpzqpla0MaHOvgxkU-FRv3.png) <br/> [![图片](https://cdnv2.ruguoapp.com/FpCLqCE97xRnvV579gFqwa26r51Dv3.jpg "img")](https://cdnv2.ruguoapp.com/FpCLqCE97xRnvV579gFqwa26r51Dv3.jpg) <br/>
+1.  **Rokid**联手**支付宝**，推出全球首创的**Rokid Glasses智能眼镜**及其创新支付功能"**看一下支付**”！用户只需动动口、扫一扫，就能快速完成支付，效率预计直接**翻倍**。这款兼顾**便捷性、安全性和隐私性**的智能支付产品，通过**声纹多因子**验证和**实时风控**，预示着未来支付方式将迎来一场"眼”技大比拼，彻底改变我们的消费体验！ <br/> [![图片](https://pic.chinaz.com/picmap/202005261145133673_9.jpg "img")](https://pic.chinaz.com/picmap/202005261145133673_9.jpg) <br/>
+2.  在近期百度AI Day上，百度亮出王牌，成功打造出业界首个**罗永浩数字人**，并公布了**高说服力数字人**的四大关键技术突破，誓要彻底革新直播营销和用户体验。为了让数字人直播普及开来，百度还启动了"梦蝶计划”和"繁星计划”，大手笔计划**倍增超头主播数字人**，并追加**10万个免费数字人**及**亿元补贴**，旨在让更多普通人及中小企业也能轻松玩转数字人直播，开启带货新纪元！ <br/> [![图片](https://pic.chinaz.com/picmap/202308101450093085_0.jpg "img")](https://pic.chinaz.com/picmap/202308101450093085_0.jpg) <br/>
+3.  **豆包电脑版与网页版**近日正式上线了全新的"**AI播客**”功能，用户只需简单上传文件或链接，就能轻松生成**双人对话形式的播客**，这简直是信息处理与接收方式的一场革命！这项功能不仅能**自然模拟真人播客的口语习惯**，还极大地简化了内容创作和信息获取的繁琐过程，尤其是在**工作和学习场景**中，简直是提效神器，让知识的获取变得像听故事一样轻松有趣。 <br/> [![图片](https://upload.chinaz.com/2025/0617/6388576568500747561503399.png "img")](https://upload.chinaz.com/2025/0617/6388576568500747561503399.png) <br/>
+4.  **阿里巴巴集团**重磅出击，推出了**Qwen3 AI模型**的升级版，如今已完美**适配苹果MLX架构**，这无疑为**苹果智能 (Apple Intelligence)**在中国市场的正式落地铺平了道路，简直是为果粉们量身定制的惊喜！新版Qwen3不仅支持多达**119种语言和方言**，更凭借其**强大性能与混合推理能力**，将为广大中国用户带来更智能、更便捷的AI体验，让智能生活触手可及。 <br/> [![图片](https://upload.chinaz.com/2025/0617/6388574725442146719806256.png "img")](https://upload.chinaz.com/2025/0617/6388574725442146719806256.png) <br/>
+5.  **LinkedIn**全面升级其求职体验，推出了革命性的**AI求职搜索功能**，彻底告别了僵硬的关键词限制，让求职者能用大白话描述理想职位，从而获得更**精准的职位推荐**！这项基于**大型语言模型 (LLM)**的创新，旨在让每位求职者都能更直观、更高效地找到最适合自己的工作，简直是求职路上的"神助攻”！ <br/> [![图片](https://pic.chinaz.com/picmap/202305291455510902_2.jpg "img")](https://pic.chinaz.com/picmap/202305291455510902_2.jpg) <br/>
+6.  归藏深度剖析了谷歌**Gemini**团队产品与研发负责人的视频精髓，总结出其**优秀编码模型理念**的"三板斧”：专注于**数据与方法论**、**代码库上下文**和**Agentic编码**，以此全面提升**编程能力**。他们的终极目标是赋能非专业开发者实现"**Vibe Coding**”，让编程变得像创作音乐一样随心所欲。团队坚信"**代码即一切**”是通用的解决工具，始终关注**真实世界价值**和**泛化性**，志在构建**卓越的通用模型**，引领编程新浪潮！
+    <video src="https://youtu.be/jwbG_m-X-gE?si=u0nz9RxOaUlW_Ab" controls="controls" width="100%"></video>
+    <br/> [![图片](https://cdnv2.ruguoapp.com/Ft-r8n03xds6ol7MmcJzdwcp0XsAv3.png "img")](https://cdnv2.ruguoapp.com/Ft-r8n03xds6ol7MmcJzdwcp0XsAv3.png) <br/> ['更多详情'](https://m.okjike.com/originalPosts/6850ec3d823f9a946aa25c94)
 
 **AI前沿研究**
-1.  腾讯AI团队这次玩大了，发布了**AI唱歌模型LeVo**！这模型在**音色克隆**、**分轨生成**和**高保真音乐表现**上，实力完全可以和Suno 4.5掰手腕，更厉害的是它支持**零样本音色克隆**和**双轨生成**，直接把音乐创作的门槛降到了地板上。腾讯还计划**开源LeVo**，这不光是要推动AI音乐生态大发展，更是要给全球音乐创作社区注入一股新活力，让更多人都能实现音乐梦想。想了解更多，可以戳['更多详情'](https://levo-demo.github.io/)。
-    <br/> [![图片](https://upload.chinaz.com/2025/0617/6388576936088470273755124.png "img")](https://upload.chinaz.com/2025/0617/6388576936088470273755124.png) <br/>
-2.  斯坦福、康奈尔等大学的研究人员最近发布了一项重磅研究：**Meta**的**Llama 3.1 70B**大型语言模型（**LLM**）在**文本记忆**方面实现了惊人突破！它居然能回忆起《**哈利波特**》第一部小说**42%**的内容，这记忆力远超其前代模型。这一显著提升不仅展示了**LLM**在理解和记忆海量文本方面的巨大进步，也预示着AI技术正一步步地向人类认知水平逼近，未来可期。
-    <br/> [![图片](https://pic.chinaz.com/picmap/202111072153100579_0.jpg "img")](https://pic.chinaz.com/picmap/202111072153100579_0.jpg) <br/>
-3.  科学家们提出了一个叫"**预算指导**”的巧妙方法，能有效控制**大型语言模型**的**推理长度**。简单来说，就是在不重新训练模型的情况下，就能显著降低**推理成本**，同时还能提升性能！这项技术在数学基准测试中表现超棒，比如在有限预算下，只用63%的"**思考令牌**”就能让准确率提升高达26%，简直是效率和效果的双重飞跃。想深入了解，可以查看['模型地址'](https://github.com/UMass-Embodied-AGI/BudgetGuidance)和['论文地址'](https://arxiv.org/abs/2506.13752)。
-4.  **Ego-R1**框架横空出世，它运用**工具思维链（CoTT）**和经过强化学习训练的代理，能够处理并分析**超长第一视角视频**——注意，是那种持续数天甚至数周的视频！这项创新厉害了，它将视频理解的时间跨度从几个小时直接扩展到了一周，这对于理解人类行为和环境交互有着颠覆性的意义。更多细节可以到['论文地址'](https://arxiv.org/abs/2506.13654)围观。
+1.  **腾讯AI团队**近日重磅发布了AI唱歌模型**LeVo**，这款模型凭借其惊艳的**零样本音色克隆**、**分轨生成**和**高保真音乐表现**，在多项关键指标上甚至可以媲美AI音乐界的"Siri”——Suno 4.5！腾讯更是大手笔宣布LeVo将以**开源**形式发布，旨在打破创作壁垒，让更多人轻松玩转AI音乐，共同推动**AI音乐生态**的蓬勃发展，未来人人都是"麦霸”！ ['更多详情'](https://levo-demo.github.io/) <br/> [![图片](https://upload.chinaz.com/2025/0617/6388576936088470273755124.png "img")](https://upload.chinaz.com/2025/0617/6388576936088470273755124.png) <br/>
+2.  一项最新研究揭示了**大型语言模型**令人惊叹的**记忆飞跃**：**Meta**最新发布的**Llama 3.1 70B模型**竟然能"记住”《哈利波特》第一部**42%的内容**，这比它的上一代模型能力提升了**近十倍**！这一**里程碑式**的进步，不仅预示着AI在**深度理解和处理文本**方面正迅速逼近**人类认知水平**，也为我们展望未来AI能力开启了无限可能——也许未来AI真的能替我们读完所有书！ <br/> [![图片](https://pic.chinaz.com/picmap/202111072153100579_0.jpg "img")](https://pic.chinaz.com/picmap/202111072153100579_0.jpg) <br/>
+3.  这项研究提出了一种名为"**预算指导**”的巧妙方法，它能在**不微调大语言模型**的情况下，如同给模型的思考"设限”，有效控制**推理长度**，从而在保持甚至提高性能的同时，显著**降低推理成本**。该方法在数学基准测试中展现出高达**26%的准确率提升**，并能有效减少计算资源消耗，更神奇的是，它还具备**估算问题难度**等**新兴能力**，简直是让大模型变得更"精打细算”！ ['论文地址'](https://arxiv.org/abs/2506.13752)
+4.  **Ego-R1**是一种全新的框架，它利用了**工具思维链（CoTT）**过程和强化学习训练的**Ego-R1智能体**，能够像"福尔摩斯”一样，对长达数天甚至数周的**第一视角视频**进行有效推理。该框架成功挑战了超长第一视角视频理解的独特难题，将视频的时间覆盖范围从几小时惊人地扩展到了一周，这就像给AI装上了一双"永不眨眼”的眼睛！ ['论文地址'](https://arxiv.org/abs/2506.13654)
 
 **AI行业展望与社会影响**
-1.  **OpenAI**最近与**美国国防部**签了一笔**2亿美元**的大合同，目标是开发**先进AI工具**，专门应对国家安全挑战。这可是OpenAI头一回涉足军事领域，预计到2026年7月完成。这合作不光秀了OpenAI的技术肌肉，更说明**人工智能**在**国家安全战略**中扮演着越来越重要的角色，未来科技和国防的边界可能更加模糊。
-    <br/> [![图片](https://pic.chinaz.com/picmap/202505261721026669_0.jpg "img")](https://pic.chinaz.com/picmap/202505261721026669_0.jpg) <br/>
-2.  吴炳见_bj.ai提出了一个很有意思的观点：就像**美图秀秀**和**朋友圈**让我们对滤镜产生了过度依赖，导致离开了它们就"没法看”一样，**大语言模型（LLM）**也可能因为能让人们**智力大幅提升**，而使我们变得**无法离开LLM**。这引人深思，是福是祸？更多探讨请点击['更多详情'](https://m.okjike.com/originalPosts/685105bccdf8310046e89d4c)。
+1.  **OpenAI**近日与**美国国防部**签下了一份为期一年的**2亿美元合同**，将在华盛顿及其周边地区为五角大楼开发先进的**人工智能工具**，以应对国家安全挑战，预计于2026年7月完成。此举不仅标志着**OpenAI首次**与美国国防部合作，更凸显了**人工智能**在国家安全战略中的**关键作用**和**广阔前景**，未来的战场可能真的要靠AI来"排兵布阵”了！ <br/> [![图片](https://pic.chinaz.com/picmap/202505261721026669_0.jpg "img")](https://pic.chinaz.com/picmap/202505261721026669_0.jpg) <br/>
+2.  吴炳见_bj.ai提出了一个关于**LLM**未来影响的深刻观点，将其巧妙地类比于**美图秀秀**对颜值的影响，预示着人们可能因**LLM**大幅提升智力而对其产生**依赖**。这一现象引发了我们对未来**人机共生**模式下**人类能力**边界的深思——当AI成为"智力滤镜”，我们自身的智慧又将如何定义？ ['更多详情'](https://m.okjike.com/originalPosts/685105bccdf8310046e89d4c)
 
 **开源TOP项目**
-1.  "月之暗面”团队又放大招了，他们开发的**开源大型语言模型Kimi-Dev-72B**正式上线！这模型专攻**代码问题解决**，尤其擅长修复**Docker环境**里的代码缺陷，简直是程序员的福音，能大幅提高开发效率。它基于**强化学习**和**两阶段框架**优化，开发者可以在Hugging Face和GitHub上免费获取，预示着未来的软件开发会变得更**智能化**、更**高效化**。
-    <br/> [![图片](https://pic.chinaz.com/picmap/202405240907574564_1.jpg "img")](https://pic.chinaz.com/picmap/202405240907574564_1.jpg) <br/>
-2.  **开源TOP项目**中，**fluentui-system-icons**以**7690**颗星成为微软提供的一系列**熟悉、友好且现代的图标**，旨在统一视觉体验，项目地址['项目地址'](https://github.com/microsoft/fluentui-system-icons)。而拥有**29967**颗星的**Jan**项目，则是一款**100%离线运行**在你电脑上的**ChatGPT开源替代品**，为用户带来**私密且自主的AI对话**体验，项目地址['项目地址'](https://github.com/menloresearch/jan)。此外，**DeepEP**项目获得**7795**颗星，它是一个专为**高效专家并行通信**设计的库，旨在大幅提升**分布式计算性能**，项目地址['项目地址'](https://github.com/deepseek-ai/DeepEP)。
-3.  项目 **automatisch** 是一款拥有 **9063** 颗星的开源项目，旨在成为 **Zapier** 的替代品。它帮助用户无需花费大量时间和金钱即可构建 **工作流自动化**，['项目地址'](https://github.com/automatisch/automatisch)。
+1.  "月之暗面”团队近日发布了**开源大型语言模型 Kimi-Dev-72B**，这简直是程序员的福音，旨在大幅提升**编程效率**和解决**代码问题**！它在**SWE-bench Verified测试**中表现卓越，尤其擅长修复**Docker环境**中的代码缺陷。该模型通过**强化学习**"磨砺”而成，能精准定位并解决代码问题，并采用**双阶段框架**简化修复流程，预示着软件开发将变得更加智能化和高效化，未来的代码可能都是AI"写”出来的！ <br/> [![图片](https://pic.chinaz.com/picmap/202405240907574564_1.jpg "img")](https://pic.chinaz.com/picmap/202405240907574564_1.jpg) <br/>
+2.  该项目名为 **fluentui-system-icons**，目前拥有**7690颗星**，它提供了一系列熟悉、友好且现代的图标，是设计师和开发者不可或缺的"素材库”！ ['项目地址'](https://github.com/microsoft/fluentui-system-icons)
+3.  项目 **jan** 荣获 **29967颗星**，它是 **ChatGPT** 的一个强大**开源替代品**，其独特之处在于可在用户电脑上实现**100%离线运行**，这简直是为追求**本地隐私保护和控制**的用户量身定制的"秘密武器”！ ['项目地址'](https://github.com/menloresearch/jan)
+4.  **DeepEP** 是一个高效的**专家并行通信库**，目前已获得**7795颗星**，其使命是像"网络加速器”一样，显著提升相关系统的通信效率，让数据传输快如闪电！ ['项目地址'](https://github.com/deepseek-ai/DeepEP)
+5.  **automatisch** 是一个拥有**9063颗星**的开源项目，它旨在作为**Zapier的免费替代品**，帮助用户**免费**且**高效**地构建**工作流自动化**。该项目致力于解决用户在自动化构建过程中面临的**时间与金钱成本**问题，简直是中小企业和个人爱好者的福音！ ['项目地址'](https://github.com/automatisch/automatisch)
 
 **社媒分享**
-1.  杨远骋Koji在旧金山分享了最新线报，指出**Manus**已经"**入侵街头**”，并展示了它在公共空间出现的场景，这可能预示着某种新技术的普及或应用。想看看具体是什么情况，可以点击['更多详情'](https://m.okjike.com/originalPosts/685153bb823f9a946aa99d05)。
-    <br/> [![图片](https://cdnv2.ruguoapp.com/FnpLiTZTVlHEzpuvpNxJa2xsCMsYv3.jpg "img")](https://cdnv2.ruguoapp.com/FnpLiTZTVlHEzpuvpNxJa2xsCMsYv3.jpg) <br/> [![图片](https://cdnv2.ruguoapp.com/FoRqaQ7pg9bEGjpOwS_pG5wCEzVv3.jpg "img")](https://cdnv2.ruguoapp.com/FoRqaQ7pg9bEGjpOwS_pG5wCEzVv3.jpg) <br/>
+1.  杨远骋Koji分享了旧金山街头的最新线报，指出名为"**Manus**”的产品已赫然出现在街头，这强烈暗示着它正积极进入市场，准备大展拳脚！这则消息伴随着两张**实物图片**，清晰地展现了**Manus**在城市环境中的实际存在，让人对这款神秘产品充满好奇！
+    <br/> [![图片](https://cdnv2.ruguoapp.com/FnpLiTZTVlHEzpuvpNxJa2xsCMsYv3.jpg "img")](https://cdnv2.ruguoapp.com/FnpLiTZTVlHEzpuvpNxJa2xsCMsYv3.jpg) <br/> ['更多详情'](https://m.okjike.com/originalPosts/685153bb823f9a946aa99d05)
 
 ---
 
