--- a/podcast/2025-06-18.md
+++ b/podcast/2025-06-18.md
@@ -2,76 +2,89 @@
 
 ## Full: Podcast Formatting 
 
-未来我们真的要“看一眼”就能买单吗？数字人主播抢饭碗，我们人类主播还有活路吗？当AI成为“智力滤镜”，人类自己思考的能力会不会变弱？
+三问：支付方式革新后，我们真的只靠“眼技”和“声波”就能买买买了吗？当数字人直播比真人还真，我们的“饭碗”还保得住吗？当AI成了我们的“智力外挂”，我们的大脑还会思考吗？
 
-嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。最近AI圈子真是花样频出，感觉我们离那个充满便利、又带点思考的未来，又近了一步。
+嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
 
-首先啊，Rokid联手支付宝，推出了个智能眼镜和“看一下支付”功能。嗯，就是说以后你动动口、扫一扫，可能就能完成支付了，效率据说翻倍。是不是听着有点科幻片的感觉？不过别担心，人家有声纹验证和实时风控，安全着呢。这不就预示着，未来支付，可能真要比拼谁的“眼”技更好了吗？
+最近啊，科技圈那叫一个热闹，各种新鲜玩意儿层出不穷，感觉一不留神，咱们就得被时代甩在后头了。今天呢，咱们就来扒一扒，最近都有哪些AI的“黑科技”又来刷新我们的认知了。
 
-接着说，百度最近在AI Day上，不仅成功打造了业界首个“罗永浩数字人”，还大手笔地启动了“梦蝶计划”和“繁星计划”。这是要追加10万个免费数字人、亿元补贴，让更多普通人甚至中小企业也能玩转数字人直播。想想啊，以后直播带货，是不是人人都能拥有一个，嗯，不掉发、不熬夜的数字分身了？
+首先，聊个劲爆的。Rokid跟支付宝联手，搞出了全球首创的**Rokid Glasses智能眼镜**，主打一个“看一下支付”！你没听错，以后买东西，动动嘴，扫一眼，钱就付了。这效率啊，据说直接翻倍！哎呀，听着是挺方便的，但你有没有想过，以后买东西，是不是得先拼个“眼技”？眼神儿不到位，是不是连辣条都买不了了？不过人家也说了，这背后有声纹多因子验证和实时风控，安全隐私都考虑到了。行吧，看来以后出门，除了看脸，还得看看这双“会付钱”的眼睛。
 
-再来，豆包电脑版和网页版上线了“AI播客”功能。你只需要上传文件或链接，它就能生成双人对话形式的播客。这可真是个提效神器，尤其对咱们上班族和学生党来说，以后听资料、学知识，就像听故事一样轻松有趣。
+说完支付，咱们聊聊直播。百度这回，在AI Day上直接把老罗…嗯，罗永浩给“数字”了！不是真老罗哈，是数字人老罗，这可是业界头一个。而且，他们还公布了“高说服力数字人”的四大突破，誓要给直播营销和用户体验带来新的面貌。想想看，以后坐在你面前带货的，可能都是AI克隆的“完美销售”！百度还特大方地搞了“梦蝶计划”和“繁星计划”，不光要倍增超头主播的数字人，还要追加10万个免费数字人，再加亿元补贴！这意思就是，以后人人都能是数字主播了？哎，我这何夕2077是不是也得赶紧排队，免费领一个数字分身，以后直播就让它去，我安心躺平收租？开个玩笑哈，不过这带货新纪元，确实是来了！
 
-阿里巴巴也没闲着，他们的Qwen3 AI模型升级了，现在完美适配苹果MLX架构，这简直是为果粉们量身定制的！它还支持119种语言和方言，以后啊，中国用户体验AI，那肯定更智能、更便捷。
+再来看内容创作。豆包电脑版和网页版最近上线了个“AI播客”功能。这个厉害了！你把文件或者链接一扔进去，它就能给你生成双人对话形式的播客。听着就跟真人聊天儿似的，语调、语气，都模拟得贼自然！这意味着什么？以后听新闻、学知识，可能就像听八卦一样轻松有趣了。工作学习想提效？直接让AI给你把报告和论文“讲”出来。省事儿，效率还高！就是，以后我们这些真人播客…嗯，压力有点大啊。不过换个角度想，我们是不是可以跟AI组成个“虚拟搭档”，一起说相声了？
 
-还有LinkedIn，也给求职体验来了个大升级，推出了AI求职搜索功能。以后你找工作，不用再绞尽脑汁想关键词了，直接用大白话描述就行，AI会帮你精准推荐。是不是感觉求职路上少了好多“玄学”？
+果粉们注意了，阿里巴巴放大招了！Qwen3 AI模型全面升级，如今已完美适配苹果MLX架构，这无疑是为苹果智能在中国市场的落地铺平了道路。而且这个Qwen3，支持多达119种语言和方言！你想啊，以后你的iPhone、iPad，甚至Mac，是不是都能变成“语言大师”了？沟通障碍？不存在的！真是让智能生活更触手可及。
 
-谈到编程，谷歌Gemini团队提出了一个“Vibe Coding”的理念，就是让编程变得像创作音乐一样随心所欲。他们的目标是赋能非专业开发者，让他们也能轻松编程。嗯，看来未来的“代码艺术家”，可能要越来越多了。
+话说回来，咱们打工人最关心的还是“饭碗”问题。LinkedIn最近就升级了他们的求职体验，推出了AI求职搜索功能。以前找工作，是不是得绞尽脑汁想关键词？现在不用了，直接用大白话描述你心仪的职位就行！比如你想找个“钱多事少离家近，老板不画饼同事不内卷，最好还有猫撸”的岗位，AI就能给你精准推荐！嗯，理论上是这样。这简直就是求职路上的“神助攻”啊！
 
-在音乐这块儿，腾讯AI团队也发布了AI唱歌模型LeVo，据说在很多方面都能媲美Suno 4.5了，而且，他们还宣布将开源！这意味啥？意味着以后人人都能成为“麦霸”，或者用AI来创作专属歌曲，感觉音乐的门槛又要被拉低了。
+诶，话说回来，AI越来越聪明，那它写代码怎么样？谷歌Gemini团队提出了个“三板斧”编码理念，要让编程变得像创作音乐一样，叫“Vibe Coding”。就是说，以后就算你不是专业的程序员，也能随心所欲地写代码。听起来是不是特别酷？他们相信“代码即一切”，想把编程变成一种人人都能掌握的通用工具。哎，这下好了，连写代码这活儿，AI都想替我们“Vibe”了。是不是该考虑转行了？
 
-说到AI的记忆力，Meta最新的Llama 3.1模型，竟然能“记住”《哈利波特》第一部42%的内容，这比上一代提升了近十倍！这可是个不小的进步，预示着AI在深度理解和处理文本方面，正迅速靠近人类水平。以后，是不是真能指望AI帮我们把所有书都读完，然后给我们划重点了？
+再说说艺术创作。腾讯AI团队最近发布了个AI唱歌模型LeVo，据说在零样本音色克隆、分轨生成这些方面，都能媲美AI音乐界的“Siri”——Suno 4.5了！更牛的是，腾讯还大手笔宣布LeVo将以开源形式发布！这意味着什么？以后人人都可以是“麦霸”，想用谁的音色唱歌，或者想自己编一首，点几下鼠标，AI给你搞定！这不就是圆了咱们的明星梦吗？
 
-另外一些有意思的进展，比如有研究提出了“预算指导”方法，让大语言模型在保持性能的同时，还能显著降低推理成本，更棒的是，它还能估算问题难度，听起来是不是很“精打细算”？还有Ego-R1，这个框架能对长达数周的第一视角视频进行有效推理，简直像给AI装了一双“永不眨眼”的眼睛！
+AI的进步速度真是让人有点跟不上。Meta的Llama 3.1 70B模型，最近居然能“记住”《哈利波特》第一部42%的内容！比它的上一代模型能力提升了近十倍！你想啊，这就像AI的脑容量突然大了十倍，而且记忆力惊人。这不就意味着，未来AI可能真能替我们把所有书都读完，然后把精华讲给你听？嗯，到时候我们是不是就可以只负责“点赞”和“转发”了？
 
-当然，AI也逐渐进入了我们生活的方方面面，OpenAI最近就和美国国防部签了个合同，要开发AI工具来应对国家安全挑战。这可是OpenAI首次和美国国防部合作，也凸显了AI在国家安全战略中的重要性。
+不过话说回来，AI再厉害，也得“精打细算”。有个研究提出个“预算指导”的方法，不用微调大模型，就能控制它思考的长度，从而大幅降低推理成本，还能在数学基准测试中提高准确率！听着是不是有点像给AI装了个“理财小管家”？既要马儿跑，还要马儿少吃草。而且它还能估算问题难度，简直是让大模型变得更“会过日子”了。
 
-不过啊，也有个观点挺值得我们思考的。有人把LLM比作“美图秀秀”对颜值的影响，说我们可能因为LLM大幅提升智力而对其产生依赖。当AI成了我们的“智力滤镜”，我们自己“原生态”的智慧，还能不能打？这确实是个问题，毕竟，大脑这块“腹肌”，还得靠自己多练练才行。
+还有一个超酷的，叫Ego-R1框架，它能像“福尔摩斯”一样，分析长达几天甚至几周的**第一视角视频**！这就像给AI装了双“永不眨眼”的眼睛，以前几个小时的视频都难搞，现在一周的也能看懂。以后是不是可以把自己的生活录下来，让AI帮你分析“我这一周都干了啥蠢事”了？
 
-最后再快速提一下，像月之暗面的Kimi-Dev-72B开源模型，能大幅提升编程效率；还有个叫jan的项目，是ChatGPT的开源替代品，能100%离线运行，追求隐私的朋友们可以了解下。哦，对了，最近旧金山街头也出现了叫“Manus”的产品，看样子是要正式进入市场了。
+然后，一个重磅消息！OpenAI，就是ChatGPT那个OpenAI，它跟美国国防部签了个大合同，要在华盛顿及其周边地区开发先进的AI工具，以应对国家安全挑战。这是OpenAI第一次与美国国防部合作。嗯，这事儿就有点意味深长了，未来的战场，会不会真的要靠AI来“排兵布阵”？希望这些AI啊，能多用在维护和平上，少搞点幺蛾子。
+
+最后，咱们来个哲学思考。有位大佬吴炳见_bj.ai提了个观点，他说LLM对智力的影响，就像美图秀秀对颜值的影响一样！你想啊，美图秀秀把咱们P得美美的，出门就有点离不开它了。那LLM把我们“变聪明”了，我们是不是也可能对它产生智力依赖？以后我们的智慧，会不会就是AI给的“滤镜”？细思极恐啊！人类的边界在哪儿？这是一个值得我们深思的问题。
+
+说到开源，这周也有不少好东西。“月之暗面”开源了Kimi-Dev-72B，专门帮程序员提升编程效率，修复代码Bug，简直是码农福音！微软也开源了一套图标库，设计师们可以拿去用了。还有一个叫Jan的项目，它是ChatGPT的开源替代，最厉害的是能100%离线运行，隐私保护杠杠的！另外还有提升通信效率的DeepEP，和Zapier的免费替代automatisch，能帮你免费自动化工作流，省钱省时，中小企业和个人爱好者的福利啊！
+
+最后一条街头小道消息。杨远骋Koji分享说，旧金山街头出现了一个叫“Manus”的产品，还配了两张实物图。看起来这玩意儿是要正式进入市场了。具体是啥，现在还不太清楚，不过能上街头，肯定有点东西。感兴趣的V们可以自己去扒一扒，看看这是个什么“新鲜玩意儿”。
 
 今天的情报就到这里，注意隐蔽，赶紧撤离。
 
+---
 本期关键词:
-#Rokid #看一下支付 #智能眼镜 #支付宝 #数字人 #罗永浩 #直播营销 #豆包 #AI播客 #阿里巴巴 #Qwen3 #苹果MLX #LinkedIn #AI求职 #LLM #谷歌Gemini #编码模型 #VibeCoding #腾讯AI #LeVo #AI唱歌 #零样本音色克隆 #Meta #Llama3.1 #记忆飞跃 #预算指导 #推理成本 #EgoR1 #第一视角视频 #OpenAI #美国国防部 #国家安全 #智力依赖 #美图秀秀 #KimiDev72B #开源模型 #jan #ChatGPT替代 #automatisch #工作流自动化 #Manus
+#AI #智能支付 #智能眼镜 #数字人 #直播 #AI播客 #LLM #求职 #AI编程 #AI音乐 #记忆 #开源 #苹果 #国防部 #智力依赖 #工作流 #Manus
 
 ## Short: Podcast Formatting 
 
-未来支付是不是要靠“刷眼”了？直播间里的数字人，我们还能分辨真假吗？AI会变成我们智力的“美图秀秀”，让我们变聪明的同时也产生依赖吗？嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
+支付方式，未来真要“看一眼”就行？
+AI当主播，数字人能完全替代真人吗？
+当AI帮你写代码、做音乐，我们的创意还值钱吗？
 
-最近支付宝和Rokid联手，推出了“看一下支付”智能眼镜，你动动口、扫一扫就能付钱，效率直接翻倍。出门可能真的要靠“眼技”了。
+嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
 
-百度也不甘示弱，亮出了罗永浩数字人，还启动了“梦蝶计划”，要大手笔送出10万个免费数字人，再加亿元补贴，让普通人也能玩转数字人直播带货。看来以后人人都能当“虚拟主播”了。
+最近Rokid和支付宝搞了个大动作，推出了“看一下支付”智能眼镜。以后买东西，可能真就动动口、扫一眼就搞定了，效率嗖嗖的。这背后还有声纹验证和实时风控保驾护航，看来以后支付方式，可能真要看谁的“眼”技更好了。
 
-豆包电脑版和网页版也上线了“AI播客”功能，你只要上传文件或链接，它就能生成双人对话播客，声音还特别自然。以后听知识就像听故事一样轻松。
+百度最近也亮了王牌，把罗永浩都“数字人化”了。他们不仅想用这技术革新直播带货，还野心勃勃地推出“梦蝶”和“繁星”计划，准备免费送出十万个数字人模型，外加亿元补贴，这架势，是想让咱们普通人也能轻松开播，当个虚拟带货达人啊。
 
-阿里巴巴的Qwen3 AI模型升级了，完美适配苹果MLX架构，支持119种语言。果粉们，你们的智能生活会更便捷。
+豆包电脑版也悄悄上线了“AI播客”功能，你只要上传文件或链接，它就能给你生成双人对话的播客，听起来就像真人聊天一样自然。这对于咱们打工人来说，简直是学习和工作中的“提效神器”，听故事一样就把知识吸收了。
 
-LinkedIn也全面升级了AI求职搜索，你用大白话描述想找的工作，AI就能给你精准推荐。找工作再也不用费劲抠关键词了。
+阿里巴巴的Qwen3 AI模型也升级了，完美适配苹果MLX架构，这等于在给苹果智能Apple Intelligence在中国市场铺路。以后用苹果设备的朋友们，你们的AI体验可能会更上一层楼，而且它还支持超多种语言和方言，更智能更方便。
 
-腾讯AI团队还发布了AI唱歌模型LeVo，零样本就能克隆音色，效果据说能媲美Suno 4.5，而且还开源了。未来人人都是“麦霸”的梦想，不远了。
+找工作的朋友注意了，领英最近推出了AI求职搜索功能。以后你不用再死抠关键词了，直接用大白话描述你想要的理想工作，AI就能帮你精准匹配，听起来就像有个私人猎头帮你筛选，找工作这事儿，是不是变得没那么头疼了？
 
-Meta最新的Llama 3.1模型，记忆力简直是飞跃，它能记住《哈利波特》第一部42%的内容，比上一代提升了近十倍。AI的记忆力都在赶超人类了，未来真能替我们读完所有书吗？
+聊到编程，谷歌Gemini团队有个超酷的编码模型理念，他们想让编程变得像创作音乐一样随心所欲，就是所谓的“Vibe Coding”。他们觉得“代码即一切”，希望能让更多非专业人士也能轻松写代码，解决实际问题。
 
-OpenAI最近和美国国防部签了一份2亿美元的合同，要帮他们开发先进的AI工具。看来AI在国家安全战略中的作用，真是越来越关键了。
+腾讯在AI音乐上也有大动作，发布了AI唱歌模型LeVo。这个模型厉害了，能零样本克隆音色，还能分轨生成，听起来跟真的一样，甚至可以跟Suno 4.5掰手腕。更重要的是，他们还要开源，看来以后人人都能当“麦霸”，创作自己的专属AI歌曲了。
 
-也有观点说，LLM（大语言模型）就像智力界的“美图秀秀”，能大幅提升你的“智力颜值”。但我们也要思考，当AI成为“智力滤镜”，我们自身的智慧又该如何定义呢？
+别忘了大模型的记忆力也在突飞猛进。Meta的Llama 3.1模型，居然能“记住”《哈利波特》第一部超过40%的内容，比之前提升了近十倍！这意味着AI在理解和处理文本上，正迅速接近咱们人类的水平，说不定以后真能替我们把所有书都读完。
+
+科学家们也给AI装上了“永不眨眼”的眼睛，一个叫Ego-R1的框架，能像福尔摩斯一样，分析长达数周的第一视角视频，这在超长视频理解上，简直是突破性的进展。
+
+提到社会影响，OpenAI最近和美国国防部签了个大单子，要帮他们开发先进的AI工具，来应对国家安全挑战。这可是OpenAI第一次和美国国防部合作，也预示着未来AI在国家安全领域将扮演更关键的角色。
+
+但也有人提出，大模型未来可能就像“智力滤镜”，就像美图秀秀改变了我们对颜值的看法一样，我们可能会越来越依赖它，甚至有点“智力P图”的感觉。那到时候，我们自己的智慧该怎么定义呢？
+
+最后再说说开源项目。月之暗面团队就发布了一个专门为程序员打造的开源大模型Kimi-Dev-72B，它能大大提高编程效率，特别擅长修复代码里的各种小毛病。看来以后写代码，可能真要靠AI“代笔”了。另外，最近旧金山街头还冒出来一个叫“Manus”的产品，具体是啥，大家可以保持关注，看看是不是又有什么新潮玩意儿要登场了。
 
 今天的情报就到这里，注意隐蔽，赶紧撤离。
 
 本期关键词:
-#AI
 #智能眼镜
 #看一下支付
 #数字人
 #AI播客
-#LLM
-#Qwen3
+#AI模型
 #AI求职
-#AI音乐
-#Llama
-#记忆飞跃
-#OpenAI
-#国防部
-#Kimi
+#AI唱歌
+#大语言模型
+#人机共生
 #开源
+#编程
