Update podcast script file for 2025-06-18

--- a/podcast/2025-06-18.md
+++ b/podcast/2025-06-18.md
@@ -2,89 +2,89 @@
 
 ## Full: Podcast Formatting 
 
-三问：支付方式革新后，我们真的只靠“眼技”和“声波”就能买买买了吗？当数字人直播比真人还真，我们的“饭碗”还保得住吗？当AI成了我们的“智力外挂”，我们的大脑还会思考吗？
+未来我们是靠“刷脸”还是“刷眼”支付呢？
+当AI也能唱歌、写代码甚至做直播，我们的饭碗真的还稳吗？
+如果AI能让我们的智力“美图秀秀”，我们自己的脑子还会不会思考？
 
-嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
+嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。今天咱们情报站又为大家整理了一堆新鲜出炉的AI黑科技，保证让你既脑洞大开，又忍不住对未来多想几秒。准备好迎接未来的冲击了吗？咱们这就开聊！
 
-最近啊，科技圈那叫一个热闹，各种新鲜玩意儿层出不穷，感觉一不留神，咱们就得被时代甩在后头了。今天呢，咱们就来扒一扒，最近都有哪些AI的“黑科技”又来刷新我们的认知了。
+首先，来聊聊支付方式的新革命。Rokid和支付宝联手，搞出了个“看一下支付”的智能眼镜。你没听错，就是“看一下”！以后出门，可能都不用带手机，直接‘眼神杀’就能付款了，据说效率能翻倍。不过话说回来，这年头，眼神不好使，是不是连饭都吃不上了？嗯，开个玩笑哈。但这‘看一下支付’，还结合了声纹多因子验证和实时风控，听起来是挺便捷、安全又隐私的。未来，大家的‘眼’技可能真要大比拼了，毕竟，眼神到位，钱包才到位嘛。
 
-首先，聊个劲爆的。Rokid跟支付宝联手，搞出了全球首创的**Rokid Glasses智能眼镜**，主打一个“看一下支付”！你没听错，以后买东西，动动嘴，扫一眼，钱就付了。这效率啊，据说直接翻倍！哎呀，听着是挺方便的，但你有没有想过，以后买东西，是不是得先拼个“眼技”？眼神儿不到位，是不是连辣条都买不了了？不过人家也说了，这背后有声纹多因子验证和实时风控，安全隐私都考虑到了。行吧，看来以后出门，除了看脸，还得看看这双“会付钱”的眼睛。
+说到AI的应用，这不，百度最近就在AI Day上整了个大活，直接把咱们的老朋友罗永浩老师，给“数字”化了。这可是业界首个高说服力数字人啊！想想看，以后老罗可能同时出现在上百个直播间，给你推荐各种好物，是不是有点……魔幻？为了让大家都能玩转数字人直播，百度还搞了个“梦蝶计划”和“繁星计划”，要倍增超头主播数字人，还送10万个免费数字人名额和亿元补贴。以后可能人人都是‘数字带货王’了，各位，准备好跟AI一起“兴风作浪”了吗？
 
-说完支付，咱们聊聊直播。百度这回，在AI Day上直接把老罗…嗯，罗永浩给“数字”了！不是真老罗哈，是数字人老罗，这可是业界头一个。而且，他们还公布了“高说服力数字人”的四大突破，誓要给直播营销和用户体验带来新的面貌。想想看，以后坐在你面前带货的，可能都是AI克隆的“完美销售”！百度还特大方地搞了“梦蝶计划”和“繁星计划”，不光要倍增超头主播的数字人，还要追加10万个免费数字人，再加亿元补贴！这意思就是，以后人人都能是数字主播了？哎，我这何夕2077是不是也得赶紧排队，免费领一个数字分身，以后直播就让它去，我安心躺平收租？开个玩笑哈，不过这带货新纪元，确实是来了！
+还有啊，豆包电脑版和网页版也悄悄上线了个“AI播客”功能。你把文件或者链接一扔，它就能给你生成个双人对话的播客，就像听故事一样。你说你忙，没时间看报告，没关系，让AI给你“播”出来！这在工作学习场景，简直是提效神器啊。以后，说不定连我这个播客主持人，都要跟AI搭档了，想想还有点小激动呢！
 
-再来看内容创作。豆包电脑版和网页版最近上线了个“AI播客”功能。这个厉害了！你把文件或者链接一扔进去，它就能给你生成双人对话形式的播客。听着就跟真人聊天儿似的，语调、语气，都模拟得贼自然！这意味着什么？以后听新闻、学知识，可能就像听八卦一样轻松有趣了。工作学习想提效？直接让AI给你把报告和论文“讲”出来。省事儿，效率还高！就是，以后我们这些真人播客…嗯，压力有点大啊。不过换个角度想，我们是不是可以跟AI组成个“虚拟搭档”，一起说相声了？
+大厂阿里也没闲着，Qwen3 AI模型升级了，专门适配苹果的MLX架构。这啥意思呢？就是为咱们果粉量身定制的AI体验要来了！未来你手里的苹果设备，可能比你想象的还要“懂你”，而且，它能听懂119种语言和方言，以后出国旅行，AI可能比翻译官还管用，你说是不是很方便？
 
-果粉们注意了，阿里巴巴放大招了！Qwen3 AI模型全面升级，如今已完美适配苹果MLX架构，这无疑是为苹果智能在中国市场的落地铺平了道路。而且这个Qwen3，支持多达119种语言和方言！你想啊，以后你的iPhone、iPad，甚至Mac，是不是都能变成“语言大师”了？沟通障碍？不存在的！真是让智能生活更触手可及。
+说到工作，LinkedIn也更新了。它推出了AI求职搜索功能，以前找工作，你是不是得琢磨半天关键词？现在不用了，直接用大白话跟AI说你想找什么样的工作，它就能给你精准推荐。这就像有个贴心的HR，专门给你量身定制简历，啊不，是量身定制职位推荐，是不是求职路上的“神助攻”？
 
-话说回来，咱们打工人最关心的还是“饭碗”问题。LinkedIn最近就升级了他们的求职体验，推出了AI求职搜索功能。以前找工作，是不是得绞尽脑汁想关键词？现在不用了，直接用大白话描述你心仪的职位就行！比如你想找个“钱多事少离家近，老板不画饼同事不内卷，最好还有猫撸”的岗位，AI就能给你精准推荐！嗯，理论上是这样。这简直就是求职路上的“神助攻”啊！
+诶，说到编程，谷歌Gemini团队有个特别酷的理念，叫“Vibe Coding”，就是说让编程变得像创作音乐一样随心所欲。他们的AI模型能帮你写代码、改Bug，甚至能让非专业人士也轻松搞定。以后，你是不是就不用再求着程序猿朋友帮你改Bug了？直接跟AI说，“嘿，给我来段能自动生成报告的代码”，然后它就“Vibe”出来了，想想都觉得效率爆棚！
 
-诶，话说回来，AI越来越聪明，那它写代码怎么样？谷歌Gemini团队提出了个“三板斧”编码理念，要让编程变得像创作音乐一样，叫“Vibe Coding”。就是说，以后就算你不是专业的程序员，也能随心所欲地写代码。听起来是不是特别酷？他们相信“代码即一切”，想把编程变成一种人人都能掌握的通用工具。哎，这下好了，连写代码这活儿，AI都想替我们“Vibe”了。是不是该考虑转行了？
+再看看前沿研究，腾讯团队搞了个AI唱歌模型叫LeVo，听说零样本音色克隆，分轨生成，高保真，厉害到都能跟Suno 4.5掰手腕了！而且他们还要开源。这下好了，未来人人都是“麦霸”，只要你敢想，AI就能帮你唱，以后KTV里，可能大家唱的都是自己“生成”的歌了，是不是很有趣？
 
-再说说艺术创作。腾讯AI团队最近发布了个AI唱歌模型LeVo，据说在零样本音色克隆、分轨生成这些方面，都能媲美AI音乐界的“Siri”——Suno 4.5了！更牛的是，腾讯还大手笔宣布LeVo将以开源形式发布！这意味着什么？以后人人都可以是“麦霸”，想用谁的音色唱歌，或者想自己编一首，点几下鼠标，AI给你搞定！这不就是圆了咱们的明星梦吗？
+还有一个有趣的研究，Meta的Llama 3.1模型，它的记忆力简直突飞猛进，能记住《哈利波特》第一部42%的内容，比上一代提升了近十倍！这意味着什么？以后AI可能真能替我们读完所有书，然后把知识“喂”给我们，你只需要问它，“哈利波特里的伏地魔是怎么死的？”它就能给你讲得清清楚楚。但这样的话，我们的大脑，会不会变得越来越“懒”呢？嗯，值得深思。
 
-AI的进步速度真是让人有点跟不上。Meta的Llama 3.1 70B模型，最近居然能“记住”《哈利波特》第一部42%的内容！比它的上一代模型能力提升了近十倍！你想啊，这就像AI的脑容量突然大了十倍，而且记忆力惊人。这不就意味着，未来AI可能真能替我们把所有书都读完，然后把精华讲给你听？嗯，到时候我们是不是就可以只负责“点赞”和“转发”了？
+说到AI，不得不提OpenAI，他们最近跟美国国防部签了个大单，要为五角大楼开发先进的AI工具。这可是OpenAI第一次跟国防部合作啊！这说明什么？AI在国家安全战略里的地位越来越重要了。未来的战场，可能真的要靠AI来“排兵布阵”了，希望AI能带来和平，而不是更多的……嗯，你懂的。
 
-不过话说回来，AI再厉害，也得“精打细算”。有个研究提出个“预算指导”的方法，不用微调大模型，就能控制它思考的长度，从而大幅降低推理成本，还能在数学基准测试中提高准确率！听着是不是有点像给AI装了个“理财小管家”？既要马儿跑，还要马儿少吃草。而且它还能估算问题难度，简直是让大模型变得更“会过日子”了。
+最后，一个很有意思的观点，有人把LLM，也就是大语言模型，比作“美图秀秀”。你想啊，美图秀秀把颜值P高了，大家就容易依赖，离不开它。那当AI能把我们的智力“P”得更高，我们是不是也会对它产生依赖，自己的大脑，会不会慢慢“退化”呢？这可是个细思极恐的问题啊，咱们人类的智力边界，又该如何定义呢？
 
-还有一个超酷的，叫Ego-R1框架，它能像“福尔摩斯”一样，分析长达几天甚至几周的**第一视角视频**！这就像给AI装了双“永不眨眼”的眼睛，以前几个小时的视频都难搞，现在一周的也能看懂。以后是不是可以把自己的生活录下来，让AI帮你分析“我这一周都干了啥蠢事”了？
+当然，咱们还得快速瞟一眼开源世界，“月之暗面”团队开源了个Kimi-Dev-72B，专门帮程序员提升编程效率，修复代码问题，简直是程序员的福音！有个叫jan的项目，号称ChatGPT的开源替代品，还能100%离线运行，追求隐私的朋友可以关注。DeepEP呢，是个高效的专家并行通信库，让数据传输快如闪电。最后，automatisch，这是个Zapier的免费替代品，帮你免费构建工作流自动化，中小企业和个人福音！
 
-然后，一个重磅消息！OpenAI，就是ChatGPT那个OpenAI，它跟美国国防部签了个大合同，要在华盛顿及其周边地区开发先进的AI工具，以应对国家安全挑战。这是OpenAI第一次与美国国防部合作。嗯，这事儿就有点意味深长了，未来的战场，会不会真的要靠AI来“排兵布阵”？希望这些AI啊，能多用在维护和平上，少搞点幺蛾子。
-
-最后，咱们来个哲学思考。有位大佬吴炳见_bj.ai提了个观点，他说LLM对智力的影响，就像美图秀秀对颜值的影响一样！你想啊，美图秀秀把咱们P得美美的，出门就有点离不开它了。那LLM把我们“变聪明”了，我们是不是也可能对它产生智力依赖？以后我们的智慧，会不会就是AI给的“滤镜”？细思极恐啊！人类的边界在哪儿？这是一个值得我们深思的问题。
-
-说到开源，这周也有不少好东西。“月之暗面”开源了Kimi-Dev-72B，专门帮程序员提升编程效率，修复代码Bug，简直是码农福音！微软也开源了一套图标库，设计师们可以拿去用了。还有一个叫Jan的项目，它是ChatGPT的开源替代，最厉害的是能100%离线运行，隐私保护杠杠的！另外还有提升通信效率的DeepEP，和Zapier的免费替代automatisch，能帮你免费自动化工作流，省钱省时，中小企业和个人爱好者的福利啊！
-
-最后一条街头小道消息。杨远骋Koji分享说，旧金山街头出现了一个叫“Manus”的产品，还配了两张实物图。看起来这玩意儿是要正式进入市场了。具体是啥，现在还不太清楚，不过能上街头，肯定有点东西。感兴趣的V们可以自己去扒一扒，看看这是个什么“新鲜玩意儿”。
+哦，对了，还有个街头情报，旧金山街头出现了一个叫“Manus”的产品，看起来是要进入市场了，具体是啥，大家可以保持关注，看看是不是又有什么新花样。咱们下次情报站再深挖。
 
 今天的情报就到这里，注意隐蔽，赶紧撤离。
 
 ---
+
 本期关键词:
-#AI #智能支付 #智能眼镜 #数字人 #直播 #AI播客 #LLM #求职 #AI编程 #AI音乐 #记忆 #开源 #苹果 #国防部 #智力依赖 #工作流 #Manus
+#智能支付
+#数字人
+#AI播客
+#AI模型
+#求职AI
+#VibeCoding
+#AI音乐
+#LLM记忆
+#预算指导
+#第一视角
+#国防AI
+#智力依赖
+#开源模型
+#工作流自动化
 
 ## Short: Podcast Formatting 
 
-支付方式，未来真要“看一眼”就行？
-AI当主播，数字人能完全替代真人吗？
-当AI帮你写代码、做音乐，我们的创意还值钱吗？
+未来支付方式会变成“眼”技大比拼吗？当AI成为我们的“智力滤镜”，我们自身的智慧又将如何定义？AI真的会改变未来的战场格局吗？嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
 
-嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
+Rokid和支付宝联手推出了智能眼镜支付，动动口扫一扫就能付钱，效率更高，还兼顾安全隐私，未来支付可能真要看“眼”色行事了。
 
-最近Rokid和支付宝搞了个大动作，推出了“看一下支付”智能眼镜。以后买东西，可能真就动动口、扫一眼就搞定了，效率嗖嗖的。这背后还有声纹验证和实时风控保驾护航，看来以后支付方式，可能真要看谁的“眼”技更好了。
+百度亮出罗永浩数字人，还推出“梦蝶计划”和“繁星计划”，要送出大量免费数字人，让更多普通人也能轻松玩转数字人直播带货，开启带货新纪元。
 
-百度最近也亮了王牌，把罗永浩都“数字人化”了。他们不仅想用这技术革新直播带货，还野心勃勃地推出“梦蝶”和“繁星”计划，准备免费送出十万个数字人模型，外加亿元补贴，这架势，是想让咱们普通人也能轻松开播，当个虚拟带货达人啊。
+豆包电脑版和网页版上线了“AI播客”功能，你只要上传文件或链接，它就能生成双人对话播客，像听故事一样学知识，是工作学习的提效神器。
 
-豆包电脑版也悄悄上线了“AI播客”功能，你只要上传文件或链接，它就能给你生成双人对话的播客，听起来就像真人聊天一样自然。这对于咱们打工人来说，简直是学习和工作中的“提效神器”，听故事一样就把知识吸收了。
+阿里巴巴升级了Qwen3模型，完美适配苹果MLX架构，这给“苹果智能”在中国落地铺平了路。新版Qwen3支持119种语言方言，带来更智能的AI体验。
 
-阿里巴巴的Qwen3 AI模型也升级了，完美适配苹果MLX架构，这等于在给苹果智能Apple Intelligence在中国市场铺路。以后用苹果设备的朋友们，你们的AI体验可能会更上一层楼，而且它还支持超多种语言和方言，更智能更方便。
+LinkedIn升级了AI求职搜索，你用大白话描述理想职位，就能获得精准推荐，找工作更直观高效了。
 
-找工作的朋友注意了，领英最近推出了AI求职搜索功能。以后你不用再死抠关键词了，直接用大白话描述你想要的理想工作，AI就能帮你精准匹配，听起来就像有个私人猎头帮你筛选，找工作这事儿，是不是变得没那么头疼了？
+谷歌Gemini团队想让编程变得像创作音乐一样随心所欲，提出“Vibe Coding”理念，让非专业人士也能轻松编程。
 
-聊到编程，谷歌Gemini团队有个超酷的编码模型理念，他们想让编程变得像创作音乐一样随心所欲，就是所谓的“Vibe Coding”。他们觉得“代码即一切”，希望能让更多非专业人士也能轻松写代码，解决实际问题。
+腾讯AI团队发布了唱歌模型LeVo，能零样本克隆音色，高保真表现媲美Suno 4.5，更宣布开源，让大家都能玩转AI音乐。
 
-腾讯在AI音乐上也有大动作，发布了AI唱歌模型LeVo。这个模型厉害了，能零样本克隆音色，还能分轨生成，听起来跟真的一样，甚至可以跟Suno 4.5掰手腕。更重要的是，他们还要开源，看来以后人人都能当“麦霸”，创作自己的专属AI歌曲了。
+Meta的Llama 3.1模型在记忆力上大飞跃，它能记住《哈利波特》第一部42%的内容，比上一代提升近十倍，AI文本理解能力正迅速提升。
 
-别忘了大模型的记忆力也在突飞猛进。Meta的Llama 3.1模型，居然能“记住”《哈利波特》第一部超过40%的内容，比之前提升了近十倍！这意味着AI在理解和处理文本上，正迅速接近咱们人类的水平，说不定以后真能替我们把所有书都读完。
+一项研究提出“预算指导”方法，不用微调大模型就能控制推理长度，降低成本，提高数学测试准确率，让大模型更“精打细算”。
 
-科学家们也给AI装上了“永不眨眼”的眼睛，一个叫Ego-R1的框架，能像福尔摩斯一样，分析长达数周的第一视角视频，这在超长视频理解上，简直是突破性的进展。
+Ego-R1是一个新框架，能对长达数周的第一视角视频进行推理，给AI装上了一双“永不眨眼”的眼睛。
 
-提到社会影响，OpenAI最近和美国国防部签了个大单子，要帮他们开发先进的AI工具，来应对国家安全挑战。这可是OpenAI第一次和美国国防部合作，也预示着未来AI在国家安全领域将扮演更关键的角色。
+接下来这个消息比较严肃。OpenAI首次与美国国防部合作，签了2亿美元合同，将为五角大楼开发先进AI工具，应对国家安全挑战，看来AI在国防领域的作用越来越重要。
 
-但也有人提出，大模型未来可能就像“智力滤镜”，就像美图秀秀改变了我们对颜值的看法一样，我们可能会越来越依赖它，甚至有点“智力P图”的感觉。那到时候，我们自己的智慧该怎么定义呢？
+有个观点很有意思，把大语言模型比作“美图秀秀”，认为人们可能对LLM产生智力依赖，这引发了我们对未来人机共生模式下人类能力边界的深思。
 
-最后再说说开源项目。月之暗面团队就发布了一个专门为程序员打造的开源大模型Kimi-Dev-72B，它能大大提高编程效率，特别擅长修复代码里的各种小毛病。看来以后写代码，可能真要靠AI“代笔”了。另外，最近旧金山街头还冒出来一个叫“Manus”的产品，具体是啥，大家可以保持关注，看看是不是又有什么新潮玩意儿要登场了。
+月之暗面团队发布了开源大语言模型Kimi-Dev-72B，大幅提升编程效率，尤其擅长修复代码问题，未来的代码可能都是AI“写”出来的。
+
+最后快速提一下几个开源项目：#fluentui-system-icons是设计师的图标素材库；#jan是ChatGPT的离线替代品；#DeepEP提升通信效率；#automatisch是免费的工作流自动化工具。
 
 今天的情报就到这里，注意隐蔽，赶紧撤离。
 
 本期关键词:
-#智能眼镜
-#看一下支付
-#数字人
-#AI播客
-#AI模型
-#AI求职
-#AI唱歌
-#大语言模型
-#人机共生
-#开源
-#编程
+#未来 #AI #Rokid #智能眼镜 #支付 #百度 #数字人 #AI播客 #Qwen3 #Apple Intelligence #AI求职 #AI唱歌 #大模型 #开源 #国家安全 #人机共生
