--- a/podcast/2025-06-18.md
+++ b/podcast/2025-06-18.md
@@ -2,89 +2,96 @@
 
 ## Full: Podcast Formatting 
 
-未来我们是靠“刷脸”还是“刷眼”支付呢？
-当AI也能唱歌、写代码甚至做直播，我们的饭碗真的还稳吗？
-如果AI能让我们的智力“美图秀秀”，我们自己的脑子还会不会思考？
+支付可以“看一眼”就搞定，那未来我们的隐私边界，是不是也“看一眼”就没了？
+当AI数字人能模拟得跟真人一样，甚至比真人更受欢迎，我们“真”人的价值，又该如何定义呢？
+如果AI能帮我们读完所有的书，写出所有的代码，甚至生成高质量的播客，那我们人类自己“思考”和“创造”的能力，会不会就此“生锈”？
 
-嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。今天咱们情报站又为大家整理了一堆新鲜出炉的AI黑科技，保证让你既脑洞大开，又忍不住对未来多想几秒。准备好迎接未来的冲击了吗？咱们这就开聊！
+嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。最近的AI世界，那可真是好戏连台啊，感觉每天都在提醒我们：未来的生活，可能比科幻片还魔幻！
 
-首先，来聊聊支付方式的新革命。Rokid和支付宝联手，搞出了个“看一下支付”的智能眼镜。你没听错，就是“看一下”！以后出门，可能都不用带手机，直接‘眼神杀’就能付款了，据说效率能翻倍。不过话说回来，这年头，眼神不好使，是不是连饭都吃不上了？嗯，开个玩笑哈。但这‘看一下支付’，还结合了声纹多因子验证和实时风控，听起来是挺便捷、安全又隐私的。未来，大家的‘眼’技可能真要大比拼了，毕竟，眼神到位，钱包才到位嘛。
+咱们先从一个特别“生活化”的创新说起吧。**Rokid**和**支付宝**联手，搞了个全球首创的**Rokid Glasses智能眼镜**，主打一个功能叫“**看一下支付**”！嗯，你没听错，就是“看一眼”就付钱了。想象一下，以后你去便利店，想买瓶水，不用掏手机，不用找钱包，甚至不用抬手腕，就那么**瞄一眼**，钱就付了，效率直接翻倍！你说这多方便？但方便之余，我突然有个不合时宜的想法：万一我走路上，不小心多看了别人购物车里的东西一眼，会不会就付了钱啊？（开玩笑哈，人家肯定有声纹多因子验证和实时风控，安全隐私都兼顾了）。不过这确实预示着，以后的支付，可能就是一场“眼”技大比拼了。
 
-说到AI的应用，这不，百度最近就在AI Day上整了个大活，直接把咱们的老朋友罗永浩老师，给“数字”化了。这可是业界首个高说服力数字人啊！想想看，以后老罗可能同时出现在上百个直播间，给你推荐各种好物，是不是有点……魔幻？为了让大家都能玩转数字人直播，百度还搞了个“梦蝶计划”和“繁星计划”，要倍增超头主播数字人，还送10万个免费数字人名额和亿元补贴。以后可能人人都是‘数字带货王’了，各位，准备好跟AI一起“兴风作浪”了吗？
+说完“眼技”，咱们再聊聊“演技”。**百度AI Day**上，**罗永浩的数字人**可是实实在在地“亮”了一回相。这数字人啊，据说打造得是高说服力，誓要革新直播营销。而且，百度还启动了“梦蝶计划”和“繁星计划”，说要**倍增超头主播数字人**，还要追加**10万个免费数字人**！嗯，免费的！这意思就是，以后可能你身边的张三李四，甚至是王二麻子，都有可能拥有一个自己的数字分身，甚至替你直播带货了。想想看，以后开会，老板坐在那儿可能都是个数字人，你敢信？
 
-还有啊，豆包电脑版和网页版也悄悄上线了个“AI播客”功能。你把文件或者链接一扔，它就能给你生成个双人对话的播客，就像听故事一样。你说你忙，没时间看报告，没关系，让AI给你“播”出来！这在工作学习场景，简直是提效神器啊。以后，说不定连我这个播客主持人，都要跟AI搭档了，想想还有点小激动呢！
+诶，话说回来，不止是看和讲，连听的方式，AI也给我们安排得明明白白。**豆包电脑版和网页版**，最近就上线了一个“**AI播客**”功能。你只需要简单上传个文件或者链接，它就能给你生成一个**双人对话形式的播客**！就跟听广播剧似的，信息接收效率蹭蹭往上涨。想想看，以后那些枯燥的报告、冗长的学习资料，直接扔给AI，它给你转化成俩人对着聊天的播客，你躺着就把报告听了，知识也学了，完美解决了你“边摸鱼边学习”的终极需求，是不是有点儿意思？
 
-大厂阿里也没闲着，Qwen3 AI模型升级了，专门适配苹果的MLX架构。这啥意思呢？就是为咱们果粉量身定制的AI体验要来了！未来你手里的苹果设备，可能比你想象的还要“懂你”，而且，它能听懂119种语言和方言，以后出国旅行，AI可能比翻译官还管用，你说是不是很方便？
+当然了，职场人最关心的可能还是工作。**LinkedIn**最近就升级了他们的求职体验，推出了**AI求职搜索功能**。以前找工作，关键词得来回琢磨，生怕错过一个词，现在好了，你可以用**大白话**告诉AI，你的理想职位是什么。比如，你可以直接说：“我要一个钱多事少离家近的躺平岗位”，它就能给你推荐精准的职位！这简直是求职路上的“神助攻”啊。
 
-说到工作，LinkedIn也更新了。它推出了AI求职搜索功能，以前找工作，你是不是得琢磨半天关键词？现在不用了，直接用大白话跟AI说你想找什么样的工作，它就能给你精准推荐。这就像有个贴心的HR，专门给你量身定制简历，啊不，是量身定制职位推荐，是不是求职路上的“神助攻”？
+咱们再把目光放远一点。**Meta**最近发布的**Llama 3.1 70B模型**，记忆力真是惊人，据说能“记住”《哈利波特》第一部**42%的内容**，比上一代提升了**近十倍**！这意思是不是以后考试，你啥都不用背了，让AI替你考就行？（开个玩笑哈，V友们别当真，知识还是得自己学的）。不过这确实说明，AI在理解和处理文本方面，正在飞速逼近人类的水平。
 
-诶，说到编程，谷歌Gemini团队有个特别酷的理念，叫“Vibe Coding”，就是说让编程变得像创作音乐一样随心所欲。他们的AI模型能帮你写代码、改Bug，甚至能让非专业人士也轻松搞定。以后，你是不是就不用再求着程序猿朋友帮你改Bug了？直接跟AI说，“嘿，给我来段能自动生成报告的代码”，然后它就“Vibe”出来了，想想都觉得效率爆棚！
+说到音乐，**腾讯AI团队**也带来了个惊喜，他们发布了AI唱歌模型**LeVo**，据说能**零样本克隆音色**，还能**分轨生成**，高保真，甚至能媲美AI音乐界的“Siri”——Suno 4.5！而且，最让人激动的是，它还要**开源**！这意味着什么？以后KTV里，人人都是“麦霸”啊！你不需要天赋，AI就是你的天赋，就问你怕不怕！
 
-再看看前沿研究，腾讯团队搞了个AI唱歌模型叫LeVo，听说零样本音色克隆，分轨生成，高保真，厉害到都能跟Suno 4.5掰手腕了！而且他们还要开源。这下好了，未来人人都是“麦霸”，只要你敢想，AI就能帮你唱，以后KTV里，可能大家唱的都是自己“生成”的歌了，是不是很有趣？
+当然了，科技的发展，可不仅仅局限于娱乐和生活。最近，**OpenAI**就跟**美国国防部**签了个大合同，要为五角大楼开发先进的AI工具，应对国家安全挑战。嗯，这事儿听起来就比较严肃了，看来未来的战场，AI也要开始“排兵布阵”了，咱V友们，咱们的“来生情报站”，看来以后真的要收集更多“战场情报”了！
 
-还有一个有趣的研究，Meta的Llama 3.1模型，它的记忆力简直突飞猛进，能记住《哈利波特》第一部42%的内容，比上一代提升了近十倍！这意味着什么？以后AI可能真能替我们读完所有书，然后把知识“喂”给我们，你只需要问它，“哈利波特里的伏地魔是怎么死的？”它就能给你讲得清清楚楚。但这样的话，我们的大脑，会不会变得越来越“懒”呢？嗯，值得深思。
-
-说到AI，不得不提OpenAI，他们最近跟美国国防部签了个大单，要为五角大楼开发先进的AI工具。这可是OpenAI第一次跟国防部合作啊！这说明什么？AI在国家安全战略里的地位越来越重要了。未来的战场，可能真的要靠AI来“排兵布阵”了，希望AI能带来和平，而不是更多的……嗯，你懂的。
-
-最后，一个很有意思的观点，有人把LLM，也就是大语言模型，比作“美图秀秀”。你想啊，美图秀秀把颜值P高了，大家就容易依赖，离不开它。那当AI能把我们的智力“P”得更高，我们是不是也会对它产生依赖，自己的大脑，会不会慢慢“退化”呢？这可是个细思极恐的问题啊，咱们人类的智力边界，又该如何定义呢？
-
-当然，咱们还得快速瞟一眼开源世界，“月之暗面”团队开源了个Kimi-Dev-72B，专门帮程序员提升编程效率，修复代码问题，简直是程序员的福音！有个叫jan的项目，号称ChatGPT的开源替代品，还能100%离线运行，追求隐私的朋友可以关注。DeepEP呢，是个高效的专家并行通信库，让数据传输快如闪电。最后，automatisch，这是个Zapier的免费替代品，帮你免费构建工作流自动化，中小企业和个人福音！
-
-哦，对了，还有个街头情报，旧金山街头出现了一个叫“Manus”的产品，看起来是要进入市场了，具体是啥，大家可以保持关注，看看是不是又有什么新花样。咱们下次情报站再深挖。
+最后呢，再给大家分享一个有点儿意思的观点。有人说啊，**LLM**就像是给我们的智力开了个“**美图秀秀**”，让你瞬间变得“聪明”起来。但话说回来，当我们的智力都靠AI来“美颜”的时候，我们自己思考的肌肉，会不会逐渐萎缩呢？当有一天我们离开了这个“智力滤镜”，我们还能不能独立思考，还能不能保持清醒？这可真是个值得深思的问题啊。
 
 今天的情报就到这里，注意隐蔽，赶紧撤离。
 
----
-
 本期关键词:
-#智能支付
+#Rokid Glasses
+#支付宝
+#看一下支付
 #数字人
+#百度
+#豆包
 #AI播客
-#AI模型
-#求职AI
-#VibeCoding
-#AI音乐
-#LLM记忆
+#阿里巴巴
+#Qwen3
+#苹果MLX
+#LinkedIn
+#AI求职搜索
+#LLM
+#谷歌
+#Gemini
+#编码模型
+#腾讯AI
+#LeVo
+#AI唱歌模型
+#开源
+#Meta
+#Llama 3.1
+#记忆飞跃
 #预算指导
-#第一视角
-#国防AI
+#Ego-R1
+#OpenAI
+#美国国防部
+#国家安全
+#美图秀秀
 #智力依赖
-#开源模型
-#工作流自动化
+#Kimi-Dev-72B
+#编程效率
+#fluentui-system-icons
+#jan
+#DeepEP
+#automatisch
+#Manus
 
 ## Short: Podcast Formatting 
 
-未来支付方式会变成“眼”技大比拼吗？当AI成为我们的“智力滤镜”，我们自身的智慧又将如何定义？AI真的会改变未来的战场格局吗？嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
+未来支付，是不是真的要靠“眼神”了？我们真的需要一个“数字分身”来替我们直播吗？当AI成为“智力滤镜”，我们的智慧又将如何定义？嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
 
-Rokid和支付宝联手推出了智能眼镜支付，动动口扫一扫就能付钱，效率更高，还兼顾安全隐私，未来支付可能真要看“眼”色行事了。
+最近Rokid和支付宝联手，推出全球首创的“看一下支付”，戴上智能眼镜，动动口扫一扫就能付款，这效率预计直接翻倍。看来未来支付可能真要比拼“眼神功力”了！
 
-百度亮出罗永浩数字人，还推出“梦蝶计划”和“繁星计划”，要送出大量免费数字人，让更多普通人也能轻松玩转数字人直播带货，开启带货新纪元。
+百度这边，不光造出了罗永浩的数字人，还启动“梦蝶计划”和“繁星计划”，要免费送出十万个数字人，还要提供补贴，看来以后人人都有机会玩转数字人直播，带货再也不是少数人的特权了。
 
-豆包电脑版和网页版上线了“AI播客”功能，你只要上传文件或链接，它就能生成双人对话播客，像听故事一样学知识，是工作学习的提效神器。
+豆包电脑版和网页版也上线了“AI播客”功能，你只要上传文件或链接，就能轻松生成双人对话形式的播客。这简直是工作学习的提效神器，让知识获取变得像听故事一样轻松有趣。
 
-阿里巴巴升级了Qwen3模型，完美适配苹果MLX架构，这给“苹果智能”在中国落地铺平了路。新版Qwen3支持119种语言方言，带来更智能的AI体验。
+阿里巴巴也推出了Qwen3 AI模型的升级版，现在完美适配苹果MLX架构，这让苹果智能在中国市场的落地更近一步，果粉们有福了。
 
-LinkedIn升级了AI求职搜索，你用大白话描述理想职位，就能获得精准推荐，找工作更直观高效了。
+LinkedIn也升级了，他们的AI求职搜索功能，让你用大白话就能描述理想职位，AI帮你精准推荐，找工作效率更高。
 
-谷歌Gemini团队想让编程变得像创作音乐一样随心所欲，提出“Vibe Coding”理念，让非专业人士也能轻松编程。
+谷歌Gemini团队在探索“Vibe Coding”，目标是让非专业开发者也能像创作音乐一样随心所欲地编程，听起来编程的门槛又要降低了。
 
-腾讯AI团队发布了唱歌模型LeVo，能零样本克隆音色，高保真表现媲美Suno 4.5，更宣布开源，让大家都能玩转AI音乐。
+前沿研究方面，腾讯AI团队发布了唱歌模型LeVo，支持零样本音色克隆，高保真音乐表现，甚至能媲美Suno 4.5。而且LeVo会开源，看来以后人人都能当“麦霸”了。
 
-Meta的Llama 3.1模型在记忆力上大飞跃，它能记住《哈利波特》第一部42%的内容，比上一代提升近十倍，AI文本理解能力正迅速提升。
+Meta的Llama 3.1模型，记忆力简直是飞跃，能记住《哈利波特》第一部42%的内容，比上一代提升了近十倍，AI在深度理解文本上越来越接近人类了。
 
-一项研究提出“预算指导”方法，不用微调大模型就能控制推理长度，降低成本，提高数学测试准确率，让大模型更“精打细算”。
+再来看看行业动向。OpenAI首次和美国国防部合作，要为五角大楼开发AI工具，应对国家安全挑战。AI在未来战场上的角色会越来越重要。
 
-Ego-R1是一个新框架，能对长达数周的第一视角视频进行推理，给AI装上了一双“永不眨眼”的眼睛。
+有观点认为，未来我们可能会像依赖美图秀秀美化颜值一样，依赖大模型来提升智力。这让我们不禁思考，当AI成为我们的“智力滤镜”时，我们自身的智慧又该如何定义呢？
 
-接下来这个消息比较严肃。OpenAI首次与美国国防部合作，签了2亿美元合同，将为五角大楼开发先进AI工具，应对国家安全挑战，看来AI在国防领域的作用越来越重要。
-
-有个观点很有意思，把大语言模型比作“美图秀秀”，认为人们可能对LLM产生智力依赖，这引发了我们对未来人机共生模式下人类能力边界的深思。
-
-月之暗面团队发布了开源大语言模型Kimi-Dev-72B，大幅提升编程效率，尤其擅长修复代码问题，未来的代码可能都是AI“写”出来的。
-
-最后快速提一下几个开源项目：#fluentui-system-icons是设计师的图标素材库；#jan是ChatGPT的离线替代品；#DeepEP提升通信效率；#automatisch是免费的工作流自动化工具。
+最后提两个有趣的开源项目，月之暗面发布了Kimi-Dev-72B，专门帮程序员提升编程效率、解决代码问题。还有一个叫Jan的项目，它是ChatGPT的开源替代品，能在你电脑上100%离线运行，特别适合注重隐私的用户。
 
 今天的情报就到这里，注意隐蔽，赶紧撤离。
 
 本期关键词:
-#未来 #AI #Rokid #智能眼镜 #支付 #百度 #数字人 #AI播客 #Qwen3 #Apple Intelligence #AI求职 #AI唱歌 #大模型 #开源 #国家安全 #人机共生
+#Rokid #支付宝 #看一下支付 #数字人 #百度 #AI播客 #豆包 #Qwen3 #苹果 #LinkedIn #AI求职 #LLM #Gemini #编程 #LeVo #AI音乐 #开源 #Llama #记忆飞跃 #推理成本 #第一视角视频 #OpenAI #国防部 #智力滤镜 #Kimi-Dev #Jan
