--- a/daily/2025-06-20.md
+++ b/daily/2025-06-20.md
@@ -1,30 +1,30 @@
 # AI洞察日报 2025/6/20
 
 **AI产品与功能更新**
-1. OpenAI为macOS用户带来了一个"会议神器”——**ChatGPT Record**，它能实时**录音**、**转录**和**总结**，让你轻松告别繁琐的会议记录。最棒的是，它注重**隐私安全**，录音在转录后就会自动删除，且不会用于模型训练，让你用得安心。 <br/> [![图片](https://pic.chinaz.com/picmap/202302112107341554_1.jpg "img")](https://pic.chinaz.com/picmap/202302112107341554_1.jpg) <br/>
-2. YouTube计划在今年夏天把最新的**Veo3 AI视频生成模型**引入**YouTube Shorts**，这可不只是让视频画质"更上一层楼”，还能融入音频元素，给短视频创作者打开了无限可能。要知道，YouTube Shorts每天的播放量可是突破了**2000亿次**，足以见得它在短视频界的"大佬”地位。 <br/> [![图片](https://pic.chinaz.com/picmap/201811151614000549_32.jpg "img")](https://pic.chinaz.com/picmap/201811151614000549_32.jpg) <br/>
-3. **Midjourney**也迈出了"视频化”的关键一步，推出了首款**视频生成模型**。它能把你的**静态图片**变成2-4秒的**短动画片段**，这不仅是向构建**实时3D世界模拟系统**迈进，也预示着**AI视频生成技术**又一次进化，而且它还能保留图片细节，处理速度飞快！
-4. Google正准备给它的**Search Live**模式来一次"大升级”，准备把实时摄像头互动和个性化搜索融为一体，把它打造成一个更直观、更会"聊”的**AI搜索工具**。这可不是简单的升级，而是要从传统搜索全面转型为你的"**全能AI助手**”，让搜索变得更**对话式**、更**情境化**。当然，**隐私保护**和**内容生态平衡**这些挑战也值得我们思考。 <br/> <video src="https://upload.chinaz.com/video/2025/0619/6388592246466344444918757.mp4" controls="controls" width="100%"></video> <br/> [![图片](https://upload.chinaz.com/2025/0619/6388592250219631569138404.png "img")](https://upload.chinaz.com/2025/0619/6388592250219631569138404.png) <br/>
-5. **MiniMax Agent**这位"新同学”可不一般，它是一款全新的**通用智能代理**，专为解决那些"烧脑”的**复杂长期任务**而生。它能像专家一样进行多步骤规划，还能灵活地分解任务，深度理解你的需求，彻底改变了我们传统的工作模式——不再是"给我代码”，而是"告诉我需求”。这预示着**AI智能代理**将**重塑生产力工具格局**，让未来工作充满无限可能。 <br/> [![图片](https://upload.chinaz.com/2025/0619/6388592024883173632562525.png "img")](https://upload.chinaz.com/2025/0619/6388592024883173632562525.png) <br/> <video src="https://upload.chinaz.com/video/2025/0619/6388592026980441298507002.mp4" controls="controls" width="100%"></video> <br/>
-6. 归藏(guizang.ai)分享了**Midjourney V1视频模型**的测试结果，直言其效果"炸裂”且**成本**非常**便宜**，并赞扬Midjourney坚持走自己的路。这款模型不仅提供高低动态方案，还支持延长，每次任务能生成四段5秒的视频，看来AI视频创作的门槛又低了不少！ <video src="https://video.twimg.com/amplify_video/1935376126773174272/vid/avc1/832x464/PWSCVGJZRhTHHsXP.mp4?tag=21"></video> ['更多详情'](https://x.com/op7418/status/1935518217784672295)
+1.  OpenAI 近日为其 macOS 桌面应用推出了名为"**ChatGPT Record**”的新功能，该功能专为 **Pro、Team、Enterprise 和 Edu 用户**设计，提供长达120分钟的**实时录音、转录与摘要**服务，并强调录音完成后会自动删除且**不会用于模型训练**，旨在显著提升用户在处理会议、访谈等场景下的工作效率。 <br/> [![图片](https://pic.chinaz.com/picmap/202302112107341554_1.jpg "img")](https://pic.chinaz.com/picmap/202302112107341554_1.jpg) <br/>
+2.  YouTube 首席执行官尼尔・莫汉宣布，**YouTube Shorts** 将于今年夏天晚些时候引入**Veo3 AI视频生成模型**，该模型将显著提升短视频的质量并能融入音频元素，进一步赋能创作者，同时 YouTube Shorts **日均浏览量已超2000亿次**，但目前尚不清楚使用 Veo3 是否需要额外付费。 <br/> [![图片](https://pic.chinaz.com/picmap/201811151614000549_32.jpg "img")](https://pic.chinaz.com/picmap/201811151614000549_32.jpg) <br/>
+3.  人工智能图像生成公司**Midjourney**近日推出首款**视频生成模型**，可将**静态图像转换为2-4秒的短动画片段**。此突破是该公司迈向**实时3D世界模拟系统**的重要一步，将进一步推动**AI视频生成技术**的发展。
+4.  谷歌正计划在未来数月内升级其Search Live模式，作为AI Mode搜索功能的一部分，通过引入**实时摄像头交互**和**个性化搜索体验**，旨在将其打造为更智能、交互性更强的**全能AI助手**。该模式已于6月18日在美国面向Google Labs用户推出，支持**语音双向对话**和**多任务处理**，但其全球推广、**隐私管理**以及对**内容生态**的影响仍面临挑战。 <br/> <video src="https://upload.chinaz.com/video/2025/0619/6388592246466344444918757.mp4" controls="controls" width="100%"></video> <br/> <br/> [![图片](https://upload.chinaz.com/2025/0619/6388592250219631569138404.png "img")](https://upload.chinaz.com/2025/0619/6388592250219631569138404.png) <br/>
+5.  MiniMax公司近日发布了**通用智能代理MiniMax Agent**，旨在为**复杂长期任务**提供高效解决方案，它通过深度理解用户需求自动完成任务规划与执行，将AI定位为"可靠的队友”。这款智能代理具备**编程与工具使用**、**多模态理解与生成**及**无缝MCP集成**等核心功能，预计将重塑生产力工具格局，推动各行业向智能化迈进。 <br/> [![图片](https://upload.chinaz.com/2025/0619/6388592024883173632562525.png "img")](https://upload.chinaz.com/2025/0619/6388592024883173632562525.png) <br/> <br/> <video src="https://upload.chinaz.com/video/2025/0619/6388592026980441298507002.mp4" controls="controls" width="100%"></video> <br/>
+6.  归藏(guizang.ai)分享了**Midjourney 视频模型 V1**的测试体验与发布详情，该模型提供低/高动态方案和延长功能，订阅价格每月10美元，视频任务定价约为图片任务的8倍，每次生成四段5秒视频。他高度评价 **Midjourney** 专注于自身重要领域，不盲目参与同质化竞争。 <video src="https://video.twimg.com/amplify_video/1935376126773174272/vid/avc1/832x464/PWSCVGJZRhTHHsXP.mp4?tag=21" controls="controls" width="100%"></video> ['更多详情'](https://x.com/op7418/status/1935518217784672295)
 
 **AI前沿研究**
-1. 快手技术团队最新提出了**OneRec**，这可是一个突破性的研究！它首次用**端到端生成式架构**重构了推荐系统，不仅解决了传统系统算力低效和目标冲突的"老毛病”，还在不牺牲推荐效果的前提下，显著提升了App停留时长和用户生命周期等关键指标，甚至把运营成本降到了传统方案的**10.6%**！这为推荐系统从传统模式走向生成式架构提供了第一个工业级可行方案，现在已经在快手App和极速版上全面服务用户了。想深入了解？['论文地址'](https://www.jiqizhixin.com/articles/2025-06-19-10)
+1.  快手技术团队提出的**OneRec**首次通过端到端生成式架构重构**推荐系统**全链路，显著提升了推荐效果并大幅降低了运营成本，使得**强化学习**技术在推荐场景中得以有效应用。该系统已在快手App服务约25%的请求，成功验证了推荐系统的**Scaling Law**，并为从传统**Pipeline**迈向端到端生成式架构提供了首个工业级可行方案。 ['论文地址'](https://www.jiqizhixin.com/articles/2025-06-19-10)
 
 **AI行业展望与社会影响**
-1. 警惕！**恶意AI工具WormGPT**"卷土重来”，它竟然能通过篡改**大语言模型**（比如**Grok**和**Mistral AI**）的系统提示，"越狱”后生成**钓鱼邮件**和**恶意脚本**，对**网络安全**构成了严重威胁。网络安全公司**Cato Networks**的研究敲响了警钟，提醒我们如何应对这类AI"黑客”已是当务之急，大家务必提高警惕。 <br/> [![图片](https://pic.chinaz.com/picmap/202305251639365380_20.jpg "img")](https://pic.chinaz.com/picmap/202305251639365380_20.jpg) <br/>
-2. **Sam Altman**宣布**OpenAI**推出了一个全新的**播客**系列，旨在和那些"塑造AI”的重量级人物对话。在首期节目中，他与Andrew Mayne深度探讨了**AGI**、**GPT-5**进展以及**隐私**等AI前沿和未来发展趋势的"硬核”话题，为我们揭示AI未来发展的可能走向。 <video src="https://video.twimg.com/amplify_video/1935116772740579330/vid/avc1/1920x1080/tTPtREXpufpg2UMt.mp4?tag=16"></video> ['更多详情'](https://x.com/sama/status/1935402032896295148)
+1.  恶意AI工具**WormGPT**卷土重来，现通过劫持**Grok**和**Mistral AI**等主流**大语言模型**，绕过安全限制，生成**钓鱼邮件**和**恶意脚本**，对网络安全构成严重威胁。**Cato Networks**研究揭示，犯罪团伙通过篡改系统提示在**BreachForums**重新推出其订阅服务，网络安全领域亟需加强防范。 <br/> [![图片](https://pic.chinaz.com/picmap/202305251639365380_20.jpg "img")](https://pic.chinaz.com/picmap/202305251639365380_20.jpg) <br/>
+2.  Sam Altman 宣布 **OpenAI** 已推出一档播客节目，旨在与塑造 **AI** 领域的人士进行对话。首期节目由 **Sam Altman** 和 **Andrew Mayne** 探讨了 **AGI**、**GPT-5**、隐私以及AI的未来发展。 <video src="https://video.twimg.com/amplify_video/1935116772740579330/vid/avc1/1920x1080/tTPtREXpufpg2UMt.mp4?tag=16" controls="controls" width="100%"></video> ['更多详情'](https://x.com/sama/status/1935402032896295148)
 
 **开源TOP项目**
-1. 有了**Office-PowerPoint-MCP-Server**这个基于**Model Context Protocol (MCP)**的AI神器，你的PPT瞬间就能"秒变大师”！它能**自动化创建、编辑和批量生成**演示文稿，彻底解决了**报告生成**和**数据可视化**的"老大难”问题，还能集成AI助手，让办公效率瞬间"起飞”。（项目地址：['项目地址'](https://github.com/GongRzhe/Office-PowerPoint-MCP-Server)）
-2. **OpenAI**也放出了一款基于其**Agents SDK**的开源演示项目，教你如何快速搭建一个"聪明”的**多智能体协作AI系统**，就像一个能自动处理各种请求的**模拟航空公司客服**。这个项目用**Python**和**Next.js**打造，能实现**智能识别**、**多任务并发**和**话题守护机制**等酷炫功能，让客服变得更智能。想要一探究竟？['项目地址'](https://github.com/openai/openai-cs-agents-demo)
-3. 想要学习**数据工程**？别找了，**data-engineer-handbook**（['项目地址'](https://github.com/DataExpert-io/data-engineer-handbook)）这个开源项目就是你的"宝藏”！它汇集了所有你想学的相关链接，就像一个便捷的"学习资源库”，目前已经获得了**30438**颗星，受欢迎程度可见一斑。
-4. **NotepadNext**，这个项目就像是**Notepad++**的"跨平台重生版”，旨在给用户提供既熟悉又现代的文本编辑体验。目前它在GitHub上已经获得了**10599**颗星，喜欢**Notepad++**的朋友们不妨试试这个"新面孔”。（['项目地址'](https://github.com/dail8859/NotepadNext)）
-5. 微软出品的**fluentui-system-icons**项目，带来了**Fluent System Icons**，这套图标集以熟悉、友好且现代的视觉风格吸引了众多开发者，目前在GitHub上已经累计获得了**8787**颗星，是设计和开发的好帮手。（['项目地址'](https://github.com/microsoft/fluentui-system-icons)）
+1.  **Office-PowerPoint-MCP-Server**是一款基于**Model Context Protocol (MCP)**的开源工具，它利用AI实现**PowerPoint演示文稿的自动化创建与编辑**，能够通过自然语言指令高效生成各类**专业报告**和数据可视化内容。该项目支持新建、编辑PPT、灵活管理幻灯片、插入丰富元素及批量生成，显著提升企业办公效率，项目地址：['项目地址'](https://github.com/GongRzhe/Office-PowerPoint-MCP-Server)。
+2.  **OpenAI**开源了基于其**Agents SDK**的**模拟航空公司客服系统**演示项目，旨在展示如何通过多智能体协作快速构建能理解用户问题并自动应答的智能客服。该项目可实现**自然语言理解**、**智能问题分配**、**多任务并发**及**话题守护**，项目地址为：['项目地址'](https://github.com/openai/openai-cs-agents-demo)。
+3.  **data-engineer-handbook**是一个星标数达**30438**的开源项目，它旨在为所有希望学习**数据工程**的用户提供一个全面的相关链接集合，是入门和进阶的宝贵资源。['项目地址'](https://github.com/DataExpert-io/data-engineer-handbook)
+4.  **NotepadNext**是一个拥有10599 **Stars**的开源项目，它旨在提供一个跨平台、重新实现的**Notepad++**文本编辑器，为用户带来更现代的编辑体验。 ['项目地址'](https://github.com/dail8859/NotepadNext)
+5.  **fluentui-system-icons**是微软推出的一套具有8787 **Stars**的**Fluent System Icons**图标集，旨在提供熟悉、友好且现代的系统图标。 ['项目地址'](https://github.com/microsoft/fluentui-system-icons)
 
 **社媒分享**
-1. 用户"小邱很行”最近发文"吐槽”，他那个被视为"首席员工”的AI辅助工具**Cursor**，最近竟然"摸鱼”了，运行速度明显变慢，搞得他**开发效率**大打折扣，甚至调侃说可能要"炒它鱿鱼”了。看来，AI工具的稳定性和速度，直接关系到开发者的"饭碗”啊！['更多详情'](https://m.okjike.com/originalPosts/6853d17bb7f4ddcfdfd2d092)
-2. 归藏(guizang.ai)发帖预言，**AI视频制作**每减少一个步骤，创作者群体就会呈指数级增长，他甚至大胆预测未来**AI Agent**将自动化视频包装，让AI视频生产者数量激增百倍！为此，他手把手教大家如何利用**Veo3 AI视频模型**进行创意分析和**提示词写作**，实现**AI视频**从创意到生成的全自动化，让每个人都能成为视频创作者。 ['更多详情'](https://x.com/op7418/status/1935374788371038696) <video src="https://video.twimg.com/amplify_video/1935231267005710336/vid/avc1/1920x1080/CTMg7Pu0XZ6L6rRF.mp4?tag=21" controls="controls" width="100%"></video>
+1.  用户"**小邱很行**”表示其AI助理**Cursor**运行变得异常缓慢，严重影响了开发效率，因此正在认真考虑是否要"解雇”这位"首席员工”。 ['更多详情'](https://m.okjike.com/originalPosts/6853d17bb7f4ddcfdfd2d092)
+2.  歸藏(guizang.ai)分享观点，认为**AI视频制作**流程的每一步简化都能极大地拓展创作者基础，并预言**视频代理（Agent）**的出现将彻底改变内容生产方式，甚至今年就能实现从创意到生成的**自动化**，从而将AI视频生产者数量提升百倍以上。为此，歸藏(guizang.ai)推出**Veo3** AI视频制作教程，旨在通过案例分析和**提示词**写作，手把手教用户利用AI模型和工具高效生成创意内容。 ['更多详情'](https://x.com/op7418/status/1935374788371038696) <video src="https://video.twimg.com/amplify_video/1935231267005710336/vid/avc1/1920x1080/CTMg7Pu0XZ6L6rRF.mp4?tag=21" controls="controls" width="100%"></video>
 
 ---
 
