docs: 统一每日报告中的标题格式并添加语音版区块
将各日报中的标题格式统一为"###### **标题**"样式，并在每篇日报末尾添加了"收听语音版"区块，包含小宇宙和抖音的链接及图片。同时移除了图片标签中的"img"属性，保持格式简洁一致。

--- a/daily/2025-06-01.md
+++ b/daily/2025-06-01.md
@@ -14,3 +14,12 @@
 12. **MMSI-Bench**是一个针对**多图像空间智能**的**VQA基准测试**，研究发现，尽管多模态大语言模型（MLLMs）已取得进展，但在**多图像空间推理**方面，其准确率（30-40%）与人类（97%）之间存在**巨大差距**。该研究诊断了模型四种主要的**失败模式**，为未来提升**多图像空间智能**提供了**宝贵见解**，论文详情请见[跳转链接](https://arxiv.org/abs/2505.23764)。
 13. **ZeroGUI**是一个创新的**在线学习框架**，它以**零人力成本自动化GUI智能体训练**，通过基于VLM的自动任务生成和奖励评估，克服了传统GUI学习对人工标注的**重度依赖**。实验证明，该框架显著提升了**GUI智能体**在不同环境下的**性能**，为**自动化GUI操作**带来了**高效解决方案**，论文详情请见[跳转链接](https://arxiv.org/abs/2505.23762)。
 14. **ATLAS**是一个针对**Transformer**架构设计的高容量**长期记忆模块**，它通过优化**记忆上下文**来克服现有模型在**长序列理解**上的局限，从而在测试时学习最优的记忆策略。实验结果表明，**ATLAS**在语言建模和长上下文理解等任务中表现优于Transformer和线性循环模型，显著**提升了性能**，论文详情请见[跳转链接](https://arxiv.org/abs/2505.23735)。
+
+---
+
+**收听语音版**
+
+| 🎙️ **小宇宙** | 📹 **抖音** |
+| --- | --- |
+| [来生小酒馆](https://www.xiaoyuzhoufm.com/podcast/683c62b7c1ca9cf575a5030e)  |   [来生情报站](https://www.douyin.com/user/MS4wLjABAAAAwpwqPQlu38sO38VyWgw9ZjDEnN4bMR5j8x111UxpseHR9DpB6-CveI5KRXOWuFwG)| 
+| ![小酒馆](https://raw.githubusercontent.com/justlovemaki/CloudFlare-AI-Insight-Daily/refs/heads/main/docs/images/sm2.png) | ![情报站](https://raw.githubusercontent.com/justlovemaki/CloudFlare-AI-Insight-Daily/refs/heads/main/docs/images/sm1.png) |
