--- a/daily/2025-06-01.md
+++ b/daily/2025-06-01.md
@@ -22,4 +22,4 @@
 | 🎙️ **小宇宙** | 📹 **抖音** |
 | --- | --- |
 | [来生小酒馆](https://www.xiaoyuzhoufm.com/podcast/683c62b7c1ca9cf575a5030e)  |   [来生情报站](https://www.douyin.com/user/MS4wLjABAAAAwpwqPQlu38sO38VyWgw9ZjDEnN4bMR5j8x111UxpseHR9DpB6-CveI5KRXOWuFwG)| 
-| ![小酒馆](https://raw.githubusercontent.com/justlovemaki/CloudFlare-AI-Insight-Daily/refs/heads/main/docs/images/sm2.png) | ![情报站](https://raw.githubusercontent.com/justlovemaki/CloudFlare-AI-Insight-Daily/refs/heads/main/docs/images/sm1.png) |
+| ![小酒馆](https://imgur.com/A63lhzL.png) | ![情报站](https://imgur.com/gLQxtJD.png) |
